cards display alignment fixed

--- a/src/components/MixtapeCard/MixtapeCardStyle.css
+++ b/src/components/MixtapeCard/MixtapeCardStyle.css
@@ -8,7 +8,7 @@
   padding: 5px;
   border-radius: 10px;
   display: flex;
-  flex-direction: row;
+  flex-direction: row !important;
 }
 
 .mixtape-card-image {
