--- a/src/components/MixtapeResultCard/MixtapeResultCardStyle.css
+++ b/src/components/MixtapeResultCard/MixtapeResultCardStyle.css
@@ -4,7 +4,7 @@
   padding: 5px;
   border-radius: 10px;
   display: flex;
-  flex-direction: row;
+  flex-direction: row !important;
 }
 
 .mixtape-result + .mixtape-result {
